Add print-out page

--- a/print.html
+++ b/print.html
@@ -63,39 +63,16 @@
 
     <!-- Primary Page Layout
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <!-- Off canvas menu starts -->
-    <div class="off-canvas-menu">
-        <a class="menu-btn" id="hamburger"><span></span></a>
-        <nav class="pushy pushy-right main-menu">
-            <a class="close-btn menu-btn"><i class="icon icon-cross"></i></a>
-            <a class="brand" href="index.html#home"><h2>Bogey's</h2></a>
-            <ul class="list-unstyled menu-items" id="menu-items">
-                <li><a href="index.html#home">Home</a></li>
-                <li><a href="index.html#about">About us</a></li>
-                <li><a href="menu.html">Our Menu</a></li>
-                <li><a href="index.html#gallery">Gallery</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
-            </ul>
-
-            <div class="social clearfix">
-                <a href="index.html"><i class="icon icon-facebook"></i></a>
-                <a href="index.html"><i class="icon icon-twitter"></i></a>
-                <a href="index.html"><i class="icon icon-google-plus"></i></a>
-                <a href="index.html"><i class="icon icon-instagram"></i></a>
-
-            </div>
-        </nav>
-    </div> <!-- Off canvas menu ends -->
-
-    <!-- Site Overlay -->
-    <div class="site-overlay"></div>
 
     <!-- Main body starts -->
     <div id="container">
         <!-- Our Menu section starts -->
-        <section id="our-menu">
+        <section id="print-out">
             <div class="container">
-                <h2>Your Order</h2>
+                <h2>A-01
+                    <small>Rian Awi</small>
+                    <span class="badge pull-right">#1</span>
+                </h2>
                 <div class="menu-table">
                     <!-- Menu Tab panes -->
                     <div class="tab-content">
@@ -134,38 +111,6 @@
                                           </tr>
                                         </table>
                                     </div>
-
-                                    <div class="menu-group-item clearfix col-lg-6 col-md-6 col-sm-12">
-<form action="print.html">
-  <div class="row">
-    <div class="col-sm-6 col-xs-12">
-      <div class="form-group">
-        <label for="exampleInputPassword1">Name (required)</label>
-        <input type="text" class="form-control input-lg" id="exampleInputPassword1" placeholder="Your Name" describedby="captchaHint">
-        <span id="nameHint" class="help-block">For billing.</span>
-      </div>
-    </div>
-    <div class="col-sm-6 col-xs-12">
-      <div class="form-group">
-        <label for="exampleInputPassword1">Order Pin (required)</label>
-        <input type="text" class="form-control input-lg" id="exampleInputPassword1" placeholder="Order Pin" describedby="captchaHint">
-        <span id="captchaHint" class="help-block">Ask your captain order for this.</span>
-      </div>
-    </div>
-    <div class="col-sm-6 col-xs-12">
-      <div class="form-group">
-        <label for="exampleInputEmail1">Email (optional)</label>
-        <input type="email" class="form-control input-lg" id="exampleInputEmail1" placeholder="Your email address" describedby="emailHint">
-        <span id="emailHint" class="help-block">If you want to receive order copy.</span>
-      </div>
-    </div>
-    <div class="col-sm-6 col-xs-12">
-      <label for="exampleInputEmail1">&nbsp;</label>
-      <button type="submit" class="btn btn-primary btn-block btn-lg pull-right">Place Order</button>
-    </div>
-  </div>
-</form>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -174,12 +119,6 @@
             </div>
         </section> <!-- Our Menu section ends -->
 
-        <!-- Footer starts -->
-        <footer>
-            <div class="container">
-                <p>© Copyright 2016 Bogey's Teras.<br /><small>A <a href="http://www.smallsteplabs.com">smallstep labs</a> craft.</small></p>
-            </div>
-        </footer> <!-- Footer ends -->
     </div> <!-- Main body ends -->
 
 
