Make modal dark

--- a/menu.html
+++ b/menu.html
@@ -541,23 +541,25 @@
         <h3 class="modal-title">Crispy Risotto Balls</h3>
       </div>
       <div class="modal-body">
-        <h2><span class="label label-warning pull-right">
-          <small>Rp</small> 34<small>.000</small></span></h2>
-        <p>
-          <img src="images/item1.jpg" alt="" class="img-rounded" style="width:50%;">
-        </p>
+        <div class="row">
+					<div class="col-sm-6">
+            <img src="images/item1.jpg" alt="" class="img-rounded img-responsive" style="width:100%;">
+						<h2><span class="label label-danger pull-right">
+							<span style="font-size:20px">Rp</span> 34<span style="font-size:20px">.000</span></span>
+						</h2>
+					</div>
+					<div class="col-sm-6">
+						<h4>Ingredients</h4>
+						<p>
+							mozzarella, Grana Padano, herb aioli, marinara
+						</p>
+						<h4>How to cook</h4>
+						<p>
+							baked 120 minutes
+						</p>
+					</div>
+        </div>
         <br />
-        <h4>Ingredients</h4>
-        <p>
-          mozzarella, Grana Padano, herb aioli, marinara
-        </p>
-        <h4>How to cook</h4>
-        <p>
-          baked 120 minutes
-        </p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
